Auth (#1)
* wip

* basic auth
