# src/main/java/org/openapitools/api/LivelinessApiDelegate.java
@@ -1,6 +1,6 @@
 package org.openapitools.api;
 
-import org.openapitools.model.GetLiveliness200Response;
+import org.openapitools.model.LivelinessResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -8,18 +8,18 @@ import org.springframework.lang.Nullable;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.validation.constraints.*;
-import javax.validation.Valid;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import javax.annotation.Generated;
+import jakarta.annotation.Generated;
 
 /**
  * A delegate to be called by the {@link LivelinessApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-28T00:11:12.019160-04:00[America/New_York]", comments = "Generator version: 7.14.0")
 public interface LivelinessApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
@@ -28,11 +28,12 @@ public interface LivelinessApiDelegate {
 
     /**
      * GET /liveliness : Check if the service is alive
+     * Useful for load balancers or monitoring tools.
      *
      * @return Service is alive (status code 200)
      * @see LivelinessApi#getLiveliness
      */
-    default ResponseEntity<GetLiveliness200Response> getLiveliness() {
+    default ResponseEntity<LivelinessResponse> getLiveliness() {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
