# src/main/java/org/openapitools/api/UsersApiDelegate.java
@@ -1,6 +1,7 @@
 package org.openapitools.api;
 
-import org.openapitools.model.GetUserById200Response;
+import org.openapitools.model.ErrorResponse;
+import org.openapitools.model.UserResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -8,18 +9,18 @@ import org.springframework.lang.Nullable;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
 
-import javax.validation.constraints.*;
-import javax.validation.Valid;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import javax.annotation.Generated;
+import jakarta.annotation.Generated;
 
 /**
  * A delegate to be called by the {@link UsersApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-28T00:11:12.019160-04:00[America/New_York]", comments = "Generator version: 7.14.0")
 public interface UsersApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
@@ -27,17 +28,30 @@ public interface UsersApiDelegate {
     }
 
     /**
-     * GET /users/:id : Get a user by ID
+     * GET /users/{id} : Get a user by ID
+     * Requires a valid JWT token.
      *
-     * @param id  (optional)
+     * @param id ID of the user to retrieve (required)
      * @return App user (status code 200)
+     *         or Unauthorized – invalid or missing token (status code 401)
+     *         or User not found (status code 404)
      * @see UsersApi#getUserById
      */
-    default ResponseEntity<GetUserById200Response> getUserById(Integer id) {
+    default ResponseEntity<UserResponse> getUserById(Integer id) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
                     String exampleString = "{ \"id\" : 1, \"username\" : \"admin\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"code\" : \"ERROR\", \"message\" : \"Unauthorized\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"code\" : \"ERROR\", \"message\" : \"Unauthorized\" }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
