# src/main/java/org/openapitools/model/UserResponse.java
@@ -4,31 +4,41 @@ import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
 import org.springframework.lang.Nullable;
 import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.OffsetDateTime;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 
 import java.util.*;
-import javax.annotation.Generated;
+import jakarta.annotation.Generated;
 
 /**
- * GetUserById200Response
+ * UserResponse
  */
 
-@JsonTypeName("getUserById_200_response")
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
-public class GetUserById200Response {
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-28T00:11:12.019160-04:00[America/New_York]", comments = "Generator version: 7.14.0")
+public class UserResponse {
 
-  private @Nullable Integer id;
+  private Integer id;
 
-  private @Nullable String username;
+  private String username;
 
-  public GetUserById200Response id(@Nullable Integer id) {
+  public UserResponse() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public UserResponse(Integer id, String username) {
+    this.id = id;
+    this.username = username;
+  }
+
+  public UserResponse id(Integer id) {
     this.id = id;
     return this;
   }
@@ -37,18 +47,18 @@ public class GetUserById200Response {
    * Get id
    * @return id
    */
-  
-  @Schema(name = "id", example = "1", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @NotNull 
+  @Schema(name = "id", example = "1", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("id")
-  public @Nullable Integer getId() {
+  public Integer getId() {
     return id;
   }
 
-  public void setId(@Nullable Integer id) {
+  public void setId(Integer id) {
     this.id = id;
   }
 
-  public GetUserById200Response username(@Nullable String username) {
+  public UserResponse username(String username) {
     this.username = username;
     return this;
   }
@@ -57,14 +67,14 @@ public class GetUserById200Response {
    * Get username
    * @return username
    */
-  
-  @Schema(name = "username", example = "admin", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @NotNull 
+  @Schema(name = "username", example = "admin", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("username")
-  public @Nullable String getUsername() {
+  public String getUsername() {
     return username;
   }
 
-  public void setUsername(@Nullable String username) {
+  public void setUsername(String username) {
     this.username = username;
   }
 
@@ -76,9 +86,9 @@ public class GetUserById200Response {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    GetUserById200Response getUserById200Response = (GetUserById200Response) o;
-    return Objects.equals(this.id, getUserById200Response.id) &&
-        Objects.equals(this.username, getUserById200Response.username);
+    UserResponse userResponse = (UserResponse) o;
+    return Objects.equals(this.id, userResponse.id) &&
+        Objects.equals(this.username, userResponse.username);
   }
 
   @Override
@@ -89,7 +99,7 @@ public class GetUserById200Response {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class GetUserById200Response {\n");
+    sb.append("class UserResponse {\n");
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    username: ").append(toIndentedString(username)).append("\n");
     sb.append("}");
